--- a/undefined-activity/undefined/index.html
+++ b/undefined-activity/undefined/index.html
@@ -11,12 +11,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://raw.githubusercontent.com/sindresorhus/devtools-detect/master/index.js"></script>
     <script src="activity-functionality.js"></script>
-    
     <link rel="stylesheet" href="style.css">
   </head>
-  <body class="text-light">
+  <body class="text-light" oncontextmenu="return false">
     <style>
       html {
         scroll-behavior: smooth;
