minor changes like scroll top

--- a/undefined-activity/undefined/index.html
+++ b/undefined-activity/undefined/index.html
@@ -98,10 +98,13 @@
         style="width: 80px; height: 80px; position: absolute"></div>
 
       <div class="container mt-4">
-        <a href="#top" class="float-right text-light">Scroll to top</a>
+       <button class="btn-primary btn btn-sm float-right">
+        <a href="#top" class="text-light">Scroll to top</a>
+       </button> 
       </div>
 
       <div class="container mt-4 pt-5 p-5"></div>
     </div>
+    
   </body>
 </html>
